# blackscope

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/services/evaluators/: base.py  connectivity.py  drivers.py  errors.py  messages.py  returning_generators.py
backend/services/evaluators/html/: compliance.py  parser.py
backend/services/evaluators/qa/: execution.py  generation.py  ui.py
backend/services/evaluators/qa/scenarios/: execution.py  generation.py
backend/services/llm/: agents.py  models.py  prompt_manager.py  tools.py
backend/services/llm/prompts/: generate_scenarios.j2  parse_execution_result.j2  parse_scenarios.j2  parse_ui_assessment.j2  scenario_execution_prompt.j2  scenario_execution_system.j2  scenario_generation_system.j2  ui_analysis.j2
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AgentCard.css  AgentCard.tsx  AgentDashboard.css  AgentDashboard.tsx  MessageItem.css  MessageItem.tsx  MessageLegend.css  MessageLegend.tsx  MetricsDisplay.css  MetricsDisplay.tsx  ScenarioCard.css  ScenarioCard.tsx  TestExecutionReportTable.css  TestExecutionReportTable.tsx  TestScenarioList.css  TestScenarioList.tsx  URLForm.css  URLForm.tsx
