[project]
name = "website-qa-assistant"
version = "0.0.1"
description = "Provides Q/A assessment for websites using AI"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain[deepseek,huggingface,openai]>=1.2.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "selenium>=4.39.0",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
]
